--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
 # Database Configuration
-DATABASE_URL=postgresql+psycopg2://perspectiva:perspectiva@localhost:5432/perspectiva
-POSTGRES_DB=perspectiva
-POSTGRES_USER=perspectiva
-POSTGRES_PASSWORD=perspectiva
+# By default the application uses SQLite for local development:
+# DATABASE_URL=sqlite:///./perspectiva.db
+# To use Postgres set:
+# DATABASE_URL=postgresql+psycopg2://user:password@host:port/dbname
+DATABASE_URL=
 
 # RSS Feeds (comma-separated URLs)
-FEEDS=https://feeds.bbci.co.uk/news/rss.xml,https://rss.cnn.com/rss/edition.rss,https://www.reutersagency.com/feed/?best-topics=business-finance&post_type=best
+FEEDS=https://feeds.bbci.co.uk/news/rss.xml,https://rss.cnn.com/rss/edition.rss
 
 # Ingestion Settings
 FETCH_INTERVAL_SECONDS=300
@@ -13,8 +14,4 @@ MAX_ITEMS_PER_FEED=15
 SUMMARY_SENTENCES=3
 
 # Application Settings
-DEBUG=false
 LOG_LEVEL=INFO
-
-# Optional: For production
-# SECRET_KEY=your-secret-key-here
