--- a/pytest.ini
+++ b/pytest.ini
@@ -1,17 +1,4 @@
-[tool:pytest]
-testpaths = tests
+[pytest]
 python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
-addopts = 
-    -v
-    --tb=short
-    --strict-markers
-    --disable-warnings
-    --cov=app
-    --cov-report=term-missing
-    --cov-report=html
-markers =
-    integration: marks tests as integration tests
-    unit: marks tests as unit tests
-    slow: marks tests as slow running
+addopts = -v --tb=short 
+--disable-warnings
