--- a/.gitignore
+++ b/.gitignore
@@ -1,64 +1,9 @@
-# Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.pytest_cache/
-
-# Environments
+*.pyc
+.venv/
 .env
+perspectiva.db
+*.sqlite3
+coverage/
+htmlcov/
 .env.local
-.env.prod
-.venv
-env/
-venv/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS generated files
-.DS_Store
-Thumbs.db
-
-# Project specific
-*.db
-test.db
-backup_*.sql
-logs/
-
-# Jenkins
-Jenkinsfile
-.jenkins/
