--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,15 @@
-"scripts": {
-  "dev": "next dev",
-  "build": "next build --no-turbo",
-  "start": "next start",
-  "lint": "next lint"
+{
+  "name": "frontend",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "15.0.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  }
 }
