--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,19 +1,17 @@
-# ---------- Build Stage ----------
-FROM node:20 AS builder
+# ---------- Builder Stage ----------
+FROM node:20-bullseye AS builder
 
+# Set working directory
 WORKDIR /app
 
-# Copy package manifests first (better caching)
+# Copy package.json and lock file
 COPY package*.json ./
 
-# Install dependencies cleanly
+# Install dependencies (clean install)
 RUN npm ci --legacy-peer-deps
 
-# Copy source code
+# Copy rest of the source code
 COPY . .
-
-# Disable Turbopack (use stable SWC compiler)
-ENV NEXT_DISABLE_TURBOPACK=1
 
 # Build Next.js app
 RUN npm run build
@@ -23,17 +21,12 @@ FROM node:20-alpine AS runner
 
 WORKDIR /app
 
-# Copy only what we need from builder
-COPY --from=builder /app/package.json ./
+# Copy only necessary files from builder
+COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/node_modules ./node_modules
 
-# Set production environment
-ENV NODE_ENV=production
-
-# Expose Next.js port
 EXPOSE 3000
 
-# Run Next.js
 CMD ["npm", "start"]
