--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,13 +2,13 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
+"scripts": {
+  "dev": "next dev --no-turbopack", 
+  "build": "next build",
+  "export": "next export",
+  "start": "serve out" 
+},
+ "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "next": "15.5.3"
