--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,9 @@ services:
     restart: unless-stopped
     ports:
       - "3000:3000"
+    environment:
+      - HOSTNAME=0.0.0.0
+      - PORT=3000
     depends_on:
       - backend
 
